--- a/src/views/menu.hbs
+++ b/src/views/menu.hbs
@@ -10,14 +10,33 @@
   <span class="text">{{save as}}</span>
   <span class="icon save" style="filter: brightness(85%)"></span>
 </li>
+<li action="save-all-changes">
+  <span class="text">{{save all}}</span>
+  <span class="icon save" style="filter: brightness(85%)"></span>
+</li>
+<hr>
 <li action="files">
   <span class="text">{{files}}</span>
-  <span class="icon folder"></span></span>
+  <span class="icon folder"></span>
 </li>
 <li action="close-current-tab">
   <span class="text">{{close file}}</span>
-  <span class="icon clearclose"></span></span>
+  <span class="icon clearclose"></span>
 </li>
+<hr>
+<li action="new-workspace">
+  <span class="text">{{new workspace}}</span>
+  <span class="icon file-control document-add"></span>
+</li>
+<li action="save-workspace">
+  <span class="text">{{save workspace}}</span>
+  <span class="icon save"></span>
+</li>
+<li action="close-workspace">
+  <span class="text">{{close workspace}}</span>
+  <span class="icon clearclose"></span>
+</li>
+<hr>
 <li action="recent">
   <span class="text">{{open recent}}</span>
   <span class="icon historyrestore"></span>
@@ -26,6 +45,7 @@
   <span class="text">{{find file}}</span>
   <span class="icon search"></span>
 </li>
+<hr>
 <li action="console">
   <span class="text">{{console}}</span>
   <span class="icon code"></span>
