--- a/src/components/sideButton/style.scss
+++ b/src/components/sideButton/style.scss
@@ -1,5 +1,4 @@
 .side-button {
-  position: relative;
   width: 25px;
   padding: 5px;
   box-sizing: border-box;
@@ -15,14 +14,30 @@
     writing-mode: vertical-rl;
   }
 
+  &.seperator {
+    flex-grow: 1;
+    border: none;
+    background-color: transparent;
+  }
+
+  &.hover {
+    span {
+      animation: ease-in;
+      display: none;
+    }
+
+    &::hover span {
+      display: block;
+    }
+  }
+
   &:active::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0; left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.5);
+    background-color: rgba($color: var(--active-icon-color), $alpha: 0.5);
   }
 }
 
@@ -32,6 +47,8 @@
   z-index: 999;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   margin-top: 2.5rem;
-  gap: 3px;
+  gap: 4px;
+  height: 90%;
 }
