--- a/src/pages/problems/style.scss
+++ b/src/pages/problems/style.scss
@@ -43,7 +43,7 @@
         }
 
         &[data-type='warning'] {
-          color: var(--error-text-color);
+          color: var(--warning-color);
         }
       }
     }
